# Dolly

./: .cproject  .gitignore  .project  Makefile.am  Makefile.am.common  README.md  autogen.sh  boot.sh  common.ac  configure.ac  wscript
src/: libdolly.pc  libdolly.pc.in
src/dolly/: CairoPtr.cpp  Dolly.cpp  FFPtr.cpp  FFPtr.h  Film.cpp  Film.h  Makefile.am  Ptr.h  Util.cpp  Window.h  WindowNop.cpp  WindowWin32.cpp  WindowX11.cpp
src/entrypoint/: main.cpp
src/include/: Makefile.am
src/include/dolly/: Dolly.h  FFPtr.h  Ptr.h
src/main/: Field.h  sha256.cpp  sha256.h
src/main/dolly/: CairoPtr.cpp  CairoPtr.h  Camera.cpp  Camera.h  Dolly.cpp  Dolly.h  FFPtr.cpp  FFPtr.h  Ptr.cpp  Ptr.h  Util.h
src/main/waltz/: Camera.cpp  Camera.h
src/sample/: 3d.cpp  3d_texture.cpp  Makefile.am  curves.cpp  kepler.cpp  mandelbrot.cpp  matrix.h  runge_kutta.cpp  sim.cpp  super_px.cpp  super_px.h  word_rotation.cpp
src/sample/main/: Field.cpp  Field.h
src/sample/sim/: main.cpp
src/sample/staining/: main.cpp  sha256.cpp
src/sample/word_rotation/: main.cpp
