AUTOMAKE_OPTIONS = subdir-objects
ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS}

bin_PROGRAMS = sample
sample_SOURCES =\
	src/entrypoint/main.cpp\
	src/main/Field.cpp\
	src/main/Field.h\
	src/main/sha256.cpp\
	src/main/sha256.h\
	src/main/dolly/CairoPtr.h\
	src/main/dolly/CairoPtr.cpp\
	src/main/dolly/FFPtr.h\
	src/main/dolly/FFPtr.cpp\
	src/main/dolly/Dolly.h\
	src/main/dolly/Dolly.cpp
